<resources>
    <string name="app_name">DroidPractice1</string>
    <string name="article1_title">История Android</string>
    <string name="article1_body1">Android — операционная система для смартфонов, планшетов, электронных книг, цифровых проигрывателей, наручных часов, фитнес-браслетов, игровых приставок, ноутбуков, нетбуков, смартбуков, очков Google Glass, телевизоров, проекторов и других устройств.</string>
    <string name="article1_body2">Основана на ядре Linux и собственной реализации виртуальной машины Java от Google. Изначально разрабатывалась компанией Android, Inc., которую затем купила Google.</string>
    <string name="share">Поделиться</string>
    <string name="likes">Лайки: %d</string>
    <string name="next_article">Читать далее</string>

    <string name="article2_title">Kotlin</string>
    <string name="article2_body1">Kotlin — статически типизированный, объектно-ориентированный язык программирования, работающий поверх Java Virtual Machine и разрабатываемый компанией JetBrains.</string>
    <string name="article2_body2">Язык назван в честь острова Котлин в Финском заливе, на котором расположен город Кронштадт.</string>
    <string name="mark_as_read">Прочитано</string>
    <string name="status_read">Статус: Прочитано</string>
    <string name="status_unread">Статус: Не прочитано</string>
</resources>